--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,7 @@
 {{define "header"}}
 <header>
   <ul class="menu">
-    <img src="../Static/images/BTM.png" id="logo">
+    <a href="/"><img src="../Static/images/BTM.png"  id="logo"></a>
     <div class="a">
     <a href="./equipes" id="btm">La Team BTM</a></div>
     <div class="a"><a href="/services" id="service">Nos Services</a> </div>
