--- a/Static/index.css
+++ b/Static/index.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
 
 body {
 
@@ -50,6 +50,7 @@ body {
     justify-content: center;
     padding: 2px;
     margin: auto;
+    margin-top: 20px;
     max-width: 50%;
     text-align: center;
     background-color: white;
@@ -58,9 +59,9 @@ body {
 .des {
     text-align: center;
     background-color: white;
+    font-family: "Montserrat", sans-serif;   
 }
 .services{
-  margin-top: -16px;
 text-align: center;
 background-color: white;
 border: 1px solid
@@ -75,8 +76,8 @@ border: 1px solid
 .image {
   background-color: white;
   border: 4px solid black;
-  width: 200px;
-  height: 200px;
+  width: 40vh;
+  height: auto;
   margin: 10px;
 }
 
