--- a/Static/header2.css
+++ b/Static/header2.css
@@ -3,7 +3,7 @@
   background-color: #fff;
   height: auto;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   padding: 1rem;
 }
