trop d'elements pour préciser

--- a/Static/articles.css
+++ b/Static/articles.css
@@ -1,6 +1,6 @@
 body {
     margin: auto;
-    background-image: url('/Static/images/Motif.png');
+    /* background-image: url('/Static/images/Motif.png'); */
 }
 
 .titre{
@@ -9,30 +9,35 @@ body {
 
 .premierParagraphe{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     margin-top: 5vh;
+
 }
 
 .text1{
-    margin-left: 15vh;
+text-align: center;
+width: 60%;
+
 }
 #image1{
     border: solid;
   height: auto;
   width: 30%;
   float: right;
-  margin-right: 3vh;
+  margin-right: 20vh;
 }
 
 .deuxiemeParagraphe{
 margin:auto;
     margin-top: 5vh;
-    width: 90%;
+    /* width: 90%; */
+    width: 60%;
     background-color: #fff;
 }
 
 .titre2{
     text-align: center;
+  
 }
 
 .image2{
@@ -42,7 +47,7 @@ margin:auto;
     margin: 0 auto;
 }
 #image2{
-    border: solid;
+  
   height: 10%;
   width: 100%;
   margin: 0 auto;
