--- a/Static/index.css
+++ b/Static/index.css
@@ -81,3 +81,39 @@ border: 1px solid
   margin: 10px;
 }
 
+@media only screen and (max-width: 768px) {
+  .image-container {
+  flex-wrap: wrap;
+  justify-content: center;
+  }
+  
+  .image {
+  width: 80vw;
+  }
+  }
+  
+  @media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .image-container {
+  justify-content: center;
+  }
+  
+  .image {
+  width: 30vh;
+  }
+  }
+  
+  .image-container {
+  margin-top: 3vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  }
+  
+  .image {
+  background-color: white;
+  border: 4px solid black;
+  width: 40vh;
+  height: auto;
+  margin: 10px;
+  }
+
